RESOLVED FIXED222108
[GStreamer] Error instead of asserting on the player in the source
https://bugs.webkit.org/show_bug.cgi?id=222108
Summary [GStreamer] Error instead of asserting on the player in the source
Xabier Rodríguez Calvar
Reported 2021-02-18 08:38:10 PST
[GStreamer] Error instead of asserting on the player in the source
Attachments
Patch (1.82 KB, patch)
2021-02-18 08:40 PST, Xabier Rodríguez Calvar
no flags
Patch (1.91 KB, patch)
2021-03-02 07:33 PST, Xabier Rodríguez Calvar
no flags
Xabier Rodríguez Calvar
Comment 1 2021-02-18 08:40:01 PST
Philippe Normand
Comment 2 2021-02-18 08:55:03 PST
Comment on attachment 420833 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=420833&action=review > Source/WebCore/ChangeLog:10 > + The release assert can be hit in some cases in smoothstreaming > + with already invalid pipelines so better to just error out instead > + of assert on release. I don't disagree about this patch, but I would like to know more about these invalid pipelines :)
Alicia Boya García
Comment 3 2021-02-18 09:06:16 PST
Do you have a test vector that reproduces the failed assertion?
Xabier Rodríguez Calvar
Comment 4 2021-02-18 22:53:36 PST
It's a DRM test that plays, ends, loops, the DRM systems fails and then sometimes you get the error.
Alicia Boya García
Comment 5 2021-02-19 06:02:18 PST
Comment on attachment 420833 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=420833&action=review > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:484 > + GST_ERROR_OBJECT(src, "player should not be null"); I would word it better: "Couldn't obtain WebKitWebSrcPlayerContext, which is necessary to make network requests." > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:485 > + ASSERT_NOT_REACHED(); I would not assert here. While reaching this case is undesirable, we're already handling the error by returning GST_FLOW_ERROR. The cause of not being able to get a player is most likely a preceding error, so crashing here doesn't help gather valuable information. Also I don't think Release and Debug should get different treatment in this case.
Alicia Boya García
Comment 6 2021-02-19 06:03:03 PST
Informal r+ with these changes
Xabier Rodríguez Calvar
Comment 7 2021-03-02 07:33:48 PST
EWS
Comment 8 2021-03-02 08:31:58 PST
Committed r273731: <https://commits.webkit.org/r273731> All reviewed patches have been landed. Closing bug and clearing flags on attachment 421933 [details].
Radar WebKit Bug Importer
Comment 9 2021-03-02 08:32:15 PST
Note You need to log in before you can comment on or make changes to this bug.