[GStreamer] Error instead of asserting on the player in the source https://bugs.webkit.org/show_bug.cgi?id=222108

Reviewed by Philippe Normand.

The release assert can be hit in some cases in smoothstreaming
with already invalid pipelines so better to just error out instead
of assert on release.

* platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
(webKitWebSrcCreate):


Canonical link: https://commits.webkit.org/234746@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273731 268f45cc-cd09-0410-ab3c-d52691b4dbfc